feat: Implement custom exceptions and update deprecated methods
- Created custom exceptions UserNotFoundException, UnauthorizedTransactionException, BankAccountNotFoundException, TransactionNotFoundException, and UnauthorizedAccessException.
- Updated LoanServiceImpl and TransactionServiceImpl to use custom exceptions.
- Added a nested comment explaining the empty contextLoads method in RestApiEbankifyApplicationTests.
- Replaced deprecated getStatusCodeValue method with getStatusCode().value() in GlobalExceptionHandlerTest.
- Replaced deprecated initMocks method with openMocks in JwtTokenProviderTest.

Changes:
- LoanServiceImpl.java
- TransactionServiceImpl.java
- RestApiEbankifyApplicationTests.java
- GlobalExceptionHandlerTest.java
- JwtTokenProviderTest.java
- UserNotFoundException.java
- UnauthorizedTransactionException.java
- BankAccountNotFoundException.java
- TransactionNotFoundException.java
- UnauthorizedAccessException.java